--- a/setup.html
+++ b/setup.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <!-- My first ever JavaScript project! woo! -->
-<!--Image by <a href="https://pixabay.com/users/Clker-Free-Vector-Images-3736/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=34536">Clker-Free-Vector-Images</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=34536">Pixabay</a>
-Image by Clker-Free-Vector-Images from Pixabay-->
 <html>
   <head>
     <meta charset="utf-8">
     <title>Setup</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="green.css">
     <script src="setup.js"></script>
   </head>
   <body id="body" style="background: linear-gradient(to bottom right, #ffffff, #aaaaaa) fixed;">
